Expense tables aligned, and correct calculation

--- a/html/css/default_lodo.css
+++ b/html/css/default_lodo.css
@@ -453,6 +453,7 @@ table.tab a:hover{
 
 .bordered th {
   border: solid 1px #666;
+  min-width: 150px;
 }
 
 .new-button {
